listings/ch16-fearless-concurrency/listing-16-09/output.txt
$ cargo run
   Compiling message-passing v0.1.0 (file:///projects/message-passing)
error[E0382]: borrow of moved value: `val`
(エラー: ムーブされた値の借用: `val`)
  --> src/main.rs:10:31
   |
8  |         let val = String::from("hi");
   |             --- move occurs because `val` has type `String`, which does not implement the `Copy` trait
   |                (`val`は`Copy`トレイトを実装しない`String`型を持つので、ムーブが発生します)
9  |         tx.send(val).unwrap();
   |                 --- value moved here
   |                    (値はここでムーブされます)
10 |         println!("val is {}", val);
   |                               ^^^ value borrowed here after move
   |                                  (ここでムーブ後に借用されます)
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider cloning the value if the performance cost is acceptable
(ヘルプ: パフォーマンスコストが許容できる場合は、クローンすることを検討してください)
   |
9  |         tx.send(val.clone()).unwrap();
   |                    ++++++++

For more information about this error, try `rustc --explain E0382`.
error: could not compile `message-passing` (bin "message-passing") due to 1 previous error
